--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    * This CSS document is delivered to you under the CC BY-SA 3.0 License.
    * https://creativecommons.org/licenses/by-sa/3.0/deed.en_US
    */
-  
+
   /* Whole document */
   body {
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -24,7 +24,7 @@
       background: #FFFFFF;
       padding: 10px 10px 10px 10px;
   }
-  
+
   /* Title of the resume */
   h1 {
       font-size: 55px;
@@ -37,7 +37,7 @@
       color: #FFFFFF;
       text-shadow: 1px 1px 1px #333;
   }
-  
+
   /* Titles of categories */
   h2 {
       /* This is called "sectioncolor" in the ConTeXt stylesheet. */
@@ -58,7 +58,7 @@
       color: #FFFFFF;
       text-shadow: 1px 1px 1px #333;
   }
-  
+
   /* Definitions */
   dt {
       float: left;
@@ -73,12 +73,12 @@
       margin-top:0;
       margin-bottom:7px;
   }
-  
+
   /* Blockquotes */
   blockquote {
       text-align: center
   }
-  
+
   /* Links */
   a {
       text-decoration: none;
@@ -90,12 +90,12 @@
       text-decoration: none;
       text-shadow: 1px 1px 1px #333;
   }
-  
+
   /* Horizontal separators */
   hr {
       color: #A6A6A6;
   }
-  
+
   table {
       width: 100%;
   }
@@ -107,14 +107,14 @@
 <table>
 <thead>
 <tr class="header">
-<th align="left">Type</th>
-<th align="left">Details</th>
+<th align="center">Type</th>
+<th align="center">Details</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">Email (Personal)</td>
-<td align="left"><script type="text/javascript">
+<td align="center">Email (Personal)</td>
+<td align="center"><script type="text/javascript">
 <!--
 h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#114;&#x61;&#x6d;&#x61;&#x6b;&#114;&#x69;&#x73;&#104;&#110;&#x61;&#110;&#46;&#110;&#x69;&#x6b;&#104;&#x69;&#108;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
@@ -122,8 +122,8 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </script><noscript>&#114;&#x61;&#x6d;&#x61;&#x6b;&#114;&#x69;&#x73;&#104;&#110;&#x61;&#110;&#46;&#110;&#x69;&#x6b;&#104;&#x69;&#108;&#32;&#x61;&#116;&#32;&#x67;&#x6d;&#x61;&#x69;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x63;&#x6f;&#x6d;</noscript></td>
 </tr>
 <tr class="even">
-<td align="left">Email (University)</td>
-<td align="left"><script type="text/javascript">
+<td align="center">Email (University)</td>
+<td align="center"><script type="text/javascript">
 <!--
 h='&#98;&#x65;&#110;&#110;&#x65;&#116;&#116;&#46;&#x65;&#100;&#x75;&#46;&#x69;&#110;';a='&#64;';n='&#110;&#x69;&#x6b;&#104;&#x69;&#108;&#46;&#114;&#x61;&#x6d;&#x61;&#x6b;&#114;&#x69;&#x73;&#104;&#110;&#x61;&#110;';e=n+a+h;
 document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
@@ -131,12 +131,12 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </script><noscript>&#110;&#x69;&#x6b;&#104;&#x69;&#108;&#46;&#114;&#x61;&#x6d;&#x61;&#x6b;&#114;&#x69;&#x73;&#104;&#110;&#x61;&#110;&#32;&#x61;&#116;&#32;&#98;&#x65;&#110;&#110;&#x65;&#116;&#116;&#32;&#100;&#x6f;&#116;&#32;&#x65;&#100;&#x75;&#32;&#100;&#x6f;&#116;&#32;&#x69;&#110;</noscript></td>
 </tr>
 <tr class="odd">
-<td align="left">LinkedIn</td>
-<td align="left"><a href="https://www.linkedin.com/in/nikramakrishnan/">nikramakrishnan</a></td>
+<td align="center">LinkedIn</td>
+<td align="center"><a href="https://www.linkedin.com/in/nikramakrishnan/">nikramakrishnan</a></td>
 </tr>
 <tr class="even">
-<td align="left">Phone</td>
-<td align="left"><a href="tel:+919833894947">+91 9833894947</a></td>
+<td align="center">Phone</td>
+<td align="center"><a href="tel:+919833894947">+91 9833894947</a></td>
 </tr>
 </tbody>
 </table>
@@ -146,14 +146,14 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 <h2 id="bio">Bio</h2>
 <p>I am a developer with experience in <code>C/C++, Python, PHP</code>. I keep adding languages to this list. I have a lot of experience with back-end web development. I learn things fast.</p>
 <h2 id="experience">Experience</h2>
-<p><strong>Developer, IT Department, Bennett University (May 2017 - Present)</strong></p>
+<h4>Developer, IT Department, Bennett University (May 2017 - Present)</h4>
 <p>Developing applications to create and automate various processes at the University.</p>
-<p><strong>Brand Ambassador, Truecaller (April - December 2015)</strong></p>
+<h4>Brand Ambassador, Truecaller (April - December 2015)</h4>
 <p>Worked with Truecaller for a short time as a Brand Ambassador.</p>
 <h2 id="teams">Teams</h2>
-<p><strong>Head, Bennett University CodeChef Campus Chapter (August 2016 - Present)</strong></p>
+<h4>Head, Bennett University CodeChef Campus Chapter (August 2016 - Present)</h4>
 <p>I am the Student Representative for the CodeChef Campus Chapter. The Chapter organizes a lot of coding-related events on a regular basis.</p>
-<p><strong>ACM Campus Chapter, Bennett University (September 2016 - August 2017)</strong></p>
+<h4>ACM Campus Chapter, Bennett University (September 2016 - August 2017)</h4>
 <p>I was part of the core team of the Association for Computing Machinery Chapter at Bennett University.</p>
 <hr />
 </body>
